# killtherobot

./: .prettierrc  README.md  convex.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
backend/: Dockerfile  README.md  app.py  pyproject.toml  test.ipynb
backend/src/killtherobot_backend/: llms.py  models.py  prompts.py  utils.py
backend/tests/: test_games.py
development/: README.md  pyproject.toml
development/mlruns/0/: meta.yaml
development/mlruns/152436839587737320/: meta.yaml
development/mlruns/152436839587737320/001b317b133244a3ac9ebdd379152225/: meta.yaml
development/mlruns/152436839587737320/006f9af9e40841f5bb323396e1f96445/: meta.yaml
development/mlruns/152436839587737320/03a1eece27d54daf92d9b8a9f0b8b4d9/: meta.yaml
development/mlruns/152436839587737320/0428f33f5d884ec6a03608de99aa194c/: meta.yaml
development/mlruns/152436839587737320/04cb23c611814af2beed46abfc93bbdf/: meta.yaml
development/mlruns/152436839587737320/09803809bf3a42528f9d12c9691dc330/: meta.yaml
development/mlruns/152436839587737320/0abec23af20d462bbd5a8a9010bac793/: meta.yaml
development/mlruns/152436839587737320/0b04bde24f114ddf83a9e11c6545e5c8/: meta.yaml
development/mlruns/152436839587737320/0bcd0e586ca94cb2b186d972feb35906/: meta.yaml
development/mlruns/152436839587737320/0cb82801213c43a7bab4b3616ed67af3/: meta.yaml
development/mlruns/152436839587737320/0e7fc23ac0d1415e845f3cd63e86f57e/: meta.yaml
development/mlruns/152436839587737320/13ddfad0e1b24b46a45870eae38525cc/: meta.yaml
development/mlruns/152436839587737320/1470f213cb19430b952b741ee318c78f/: meta.yaml
development/mlruns/152436839587737320/14b3d746f44c4527b29608e7a643996e/: meta.yaml
development/mlruns/152436839587737320/15dcf685b01742d4bc46aa8d2d357665/: meta.yaml
development/mlruns/152436839587737320/16b4e0b575c8460888a0d973d09e825b/: meta.yaml
development/mlruns/152436839587737320/17667208ac674410bde53d1358fec230/: meta.yaml
development/mlruns/152436839587737320/18aab5d5a40e4802a286b4d6a72355c0/: meta.yaml
development/notebooks/: 001_answer_prompts.ipynb
development/src/killtherobot_dev/: prompts.py
(+1309 files in other folders)
