[project]
name = "killtherobot_dev"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sean Daly", email = "the_sean_c@fastmail.com"},
]
dependencies = [
    "openai>=1.51.2",
    "ipykernel>=6.29.5",
    "mlflow>=2.17.0",
    "dotenv>=0.0.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
