[project]
name = "killtherobot_dev"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sean Daly", email = "the_sean_c@fastmail.com"},
]
dependencies = [
    "openai>=1.51.2",
    "ipykernel>=6.29.5",
    "mlflow>=2.17.0",
    "langchain>=0.3.3",
    "langchain-core>=0.3.10",
    "langchain-openai>=0.2.2",
    "langchain-anthropic>=0.2.3",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
